creating and updating house

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=3001
-MONGO_URL=mongodb+srv://root123:root1234@cluster1.kqvqvt7.mongodb.net/user?retryWrites=true&w=majority&appName=Cluster1
+MONGO_URL=mongodb+srv://root123:root1234@cluster1.kqvqvt7.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster1
+JWT_SECRET=jwt123
