--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "joi": "^17.13.3",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.0",
     "nodemon": "^3.1.4"
